--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vue-boilerplate",
     "boilerplate"
   ],
-  "author": "Naufal Rabbani <bosnaufalemail@gmail.com>",
+  "author": "Tri Gunawan <bosnaufalemail@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/BosNaufal/vue-starter/issues"
